logout and delete comment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
@@ -121,6 +121,12 @@ span {
   margin-left: 20px;
   text-decoration: none;
   color: white;
+}
+
+.navbar button {
+  width: 150px;
+  height: 40px;
+  cursor: pointer;
 }
 
 /* INDIVIDUAL POST */
